# local-memory

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md  cargo  config.json  local-memory.json  models.yaml  opencode.json  session  test_e2e.sh
.opencode/: oh-my-opencode.json
.opencode/agents/: recaller.md
.opencode/skills/local-memory/: SKILL.md
.sisyphus/: boulder.json
.sisyphus/drafts/: Artifacts.md  SDD.md  Spec.md
.sisyphus/plans/: rust-local-memory.md
benches/: search_bench.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  GAP_ANALYSIS.md  MCP_INTEGRATION.md  ROADMAP.md
openspec/: config.yaml
openspec/specs/: Core.md
scripts/: check_nomic.rs  check_qwen.rs
skills/local-memory/: SKILL.md
spec/: Artifacts.md  SDD.md  Spec.md
src/: cli.rs  config.rs  lib.rs  main.rs
src/engine/: bq.rs  communities.rs  conversation.rs  decay.rs  funnel.rs  git.rs  graph.rs  ingestion.rs  matryoshka.rs  mod.rs  search_stage1.rs  search_stage2.rs  search_stage3.rs  shell.rs  vectors.rs
src/mcp/: tools.rs
src/model/: auth.rs  base.rs  candle.rs  downloader.rs  llm.rs  mod.rs  nomic.rs  ollama.rs
src/model/candle/: backend.rs  mod.rs  (+2 more)
src/storage/: db.rs  mod.rs  registry.rs  schema.rs  sqlite.rs  tier.rs
tests/: edgequake_integration_test.rs  mcp_e2e_test.rs  recall_bench.rs  tier_test.rs
tests/integration_test/: candle_provider.rs  extractor.rs  graphrag.rs  mcp.rs  mod.rs  retrieval.rs
tests/unit_test/: chunking.rs  config.rs  decay.rs  decay_entities.rs  downloader.rs  llm.rs  mod.rs  model_loader.rs  model_registry.rs  registry.rs  temporal.rs
(+43 files in other folders)
