[package]
name = "local-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bitvec = "1.0.1"
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
fjall = "3.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simsimd = "6.5.13"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
bincode = "1.3.3"
tokenizers = "0.22.2"

[dev-dependencies]
tempfile = "3.17.1"
