[package]
name = "local-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simsimd = "6.5.13"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
bincode = "1.3.3"
tokenizers = "0.22.2"
clap = { version = "4.5.31", features = ["derive"] }
tabled = "0.18.0"
colored = "3.0.0"
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.0"
edgequake-llm = "0.2.1"
zerocopy = { version = "0.8", features = ["derive"] }
async-trait = "0.1.80"

[dev-dependencies]
tempfile = "3.17.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_bench"
harness = false
